--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -4,11 +4,15 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - fork-release
 
 permissions:
   pull-requests: write
   contents: write
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   release-plz:
@@ -19,9 +23,9 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: Boshen/setup-rust@main
+      - uses: Boshen/setup-rust@v1.0.0
         with:
-          save-cache: ${{ github.ref_name == 'main' }}
+          save-cache: ${{ github.ref_name == 'fork-release' }}
           cache-key: warm
 
       - name: Run release-plz
@@ -31,25 +35,25 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_PLZ_TOKEN }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
-      # - name: Bump package.json
-      #   if: ${{ steps.release-plz.outputs.prs_created }}
-      #   env:
-      #     GH_TOKEN: ${{ github.token }}
-      #     RELEASES: ${{ steps.release-plz.outputs.releases }}
-      #     PR: ${{ steps.release-plz.outputs.pr }}
-      #   run: |
-      #     set -e
+      - name: Bump package.json
+        if: ${{ steps.release-plz.outputs.prs_created }}
+        env:
+          GH_TOKEN: ${{ github.token }}
+          RELEASES: ${{ steps.release-plz.outputs.releases }}
+          PR: ${{ steps.release-plz.outputs.pr }}
+        run: |
+          set -e
 
-      #     pr_number=${{ fromJSON(steps.release-plz.outputs.pr).number }}
-      #     if [[ -n "$pr_number" ]]; then
-      #       version=$(echo "$RELEASES" | jq -r '.[0].version')
-      #       echo "version: $version"
+          pr_number=${{ fromJSON(steps.release-plz.outputs.pr).number }}
+          if [[ -n "$pr_number" ]]; then
+            version=$(echo "$RELEASES" | jq -r '.[0].version')
+            echo "version: $version"
 
-      #       jq --arg version "${version}" '.version = ($version)' npm/package.json > tmp
-      #       mv tmp npm/package.json
+            jq --arg version "${version}" '.version = ($version)' npm/package.json > tmp
+            mv tmp npm/package.json
 
-      #       gh pr checkout $pr_number
-      #       git add .
-      #       git commit -m "Update package.json"
-      #       git push
-      #     fi
+            gh pr checkout $pr_number
+            git add .
+            git commit -m "Update package.json"
+            git push
+          fi
