--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -8,7 +8,7 @@ on:
       - '**/*.md'
   push:
     branches:
-      - fork-release
+      - main
     paths-ignore:
       - '**/*.md'
 
@@ -29,7 +29,7 @@ jobs:
       - uses: Boshen/setup-rust@v1.0.0
         with:
           cache-key: codecov
-          save-cache: ${{ github.ref_name == 'fork-release' }}
+          save-cache: ${{ github.ref_name == 'main' }}
           tools: cargo-llvm-cov
           components: llvm-tools-preview
 
