chore: bump to edition 2024

--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,6 +1,10 @@
+style_edition = "2024"
+
 # Make Rust more readable given most people have wide screens nowadays.
 # This is also the setting used by [rustc](https://github.com/rust-lang/rust/blob/master/rustfmt.toml)
 use_small_heuristics = "Max"
 
 # Use field initialize shorthand if possible
 use_field_init_shorthand = true
+
+reorder_modules = true
