--- a/fixtures/pnpm-workspace/package.json
+++ b/fixtures/pnpm-workspace/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "packageManager": "pnpm@8.15.3",
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "enhanced-resolve": "^5.17.1",
-    "oxc-resolver": "latest"
+    "enhanced-resolve": "^5.18.1",
+    "oxc-resolver": "^5.0.0"
   }
 }
