--- a/fixtures/pnpm/package.json
+++ b/fixtures/pnpm/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "axios": "1.6.2",
+    "axios": "1.8.3",
+    "decimal.js": "10.5.0",
     "ipaddr.js": "2.2.0",
-    "postcss": "8.4.33",
-    "styled-components": "6.1.1",
-    "mathjs": "13.2.0",
-    "decimal.js": "10.4.3"
+    "mathjs": "14.3.1",
+    "postcss": "8.5.3",
+    "styled-components": "6.1.15"
   }
 }
