chore: bump criterion2 to v3, pnpm to v10

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,5 @@
 packages:
-  - 'npm'
-  - 'napi'
-  - 'fixtures/pnpm'
-  - 'fixtures/pnpm-workspace/**'
+  - npm
+  - napi
+  - fixtures/pnpm
+  - fixtures/pnpm-workspace/**
