--- a/fixtures/pnp/package.json
+++ b/fixtures/pnp/package.json
@@ -2,6 +2,7 @@
   "name": "pnp",
   "packageManager": "yarn@4.7.0",
   "dependencies": {
+    "beachball": "^2.51.0",
     "is-even": "^1.0.0",
     "is-odd": "^3.0.1",
     "lib": "link:./shared",
