--- a/.github/actions/pnpm/action.yml
+++ b/.github/actions/pnpm/action.yml
@@ -2,6 +2,11 @@ name: Pnpm
 
 description: Install pnpm
 
+inputs:
+  architecture:
+    description: The architecture to use
+    required: false
+
 runs:
   using: composite
   steps:
@@ -10,7 +15,12 @@ runs:
     - uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4
       with:
         node-version-file: .node-version
+        architecture: ${{ inputs.architecture }}
         cache: pnpm
+
+    - if: ${{ inputs.architecture == 'x86' }}
+      shell: bash
+      run: pnpm config set supportedArchitectures.cpu "ia32"
 
     - name: pnpm
       shell: bash
