--- a/.github/workflows/release-napi.yml
+++ b/.github/workflows/release-napi.yml
@@ -7,6 +7,7 @@ on:
       - main
     paths:
       - npm/package.json # Please only commit this file, so we don't need to wait for test CI to pass.
+  pull_request: null
 
 env:
   DEBUG: "napi:*"
@@ -41,7 +42,7 @@ jobs:
 
   build:
     needs: check
-    if: needs.check.outputs.version_changed == 'true'
+    # if: needs.check.outputs.version_changed == 'true'
     env:
       version: ${{ needs.check.outputs.version }}
     outputs:
@@ -52,34 +53,58 @@ jobs:
         include:
           - os: windows-latest
             target: x86_64-pc-windows-msvc
+            build: pnpm build
           - os: windows-latest
             target: aarch64-pc-windows-msvc
+            build: pnpm build
           - os: windows-latest
             target: i686-pc-windows-msvc
+            architecture: x86
+            build: pnpm build
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
+            build: pnpm build --use-napi-cross
           - os: ubuntu-latest
             target: x86_64-unknown-linux-musl
+            build: pnpm build -x
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
+            build: pnpm build --use-napi-cross
           - os: ubuntu-latest
             target: aarch64-unknown-linux-musl
+            build: pnpm build -x
           - os: ubuntu-latest
             target: armv7-unknown-linux-gnueabihf
+            build: pnpm build --use-napi-cross
           - os: ubuntu-latest
             target: armv7-unknown-linux-musleabihf
+            build: pnpm build -x
           - os: ubuntu-latest
             target: riscv64gc-unknown-linux-gnu
+            setup: |
+              sudo apt-get update
+              sudo apt-get install gcc-riscv64-linux-gnu -y
+              echo "CXX=riscv64-linux-gnu-gcc" >> $GITHUB_ENV
+            build: pnpm build --use-napi-cross
           - os: ubuntu-latest
             target: powerpc64le-unknown-linux-gnu
+            build: pnpm build --use-napi-cross
           - os: ubuntu-latest
             target: s390x-unknown-linux-gnu
+            setup: |
+              sudo apt-get update
+              sudo apt-get install gcc-s390x-linux-gnu -y
+              echo "CXX=s390x-linux-gnu-gcc" >> $GITHUB_ENV
+            build: pnpm build
           - os: macos-latest
             target: x86_64-apple-darwin
+            build: pnpm build
           - os: macos-latest
             target: aarch64-apple-darwin
+            build: pnpm build
           - os: ubuntu-latest
             target: wasm32-wasip1-threads
+            build: pnpm build
 
     name: Package ${{ matrix.target }}
     runs-on: ${{ matrix.os }}
@@ -87,6 +112,8 @@ jobs:
       - uses: taiki-e/checkout-action@b13d20b7cda4e2f325ef19895128f7ff735c0b3d # v1
 
       - uses: ./.github/actions/pnpm
+        with:
+          architecture: ${{ matrix.architecture }}
 
       - run: rustup target add ${{ matrix.target }}
 
@@ -95,21 +122,24 @@ jobs:
         with:
           version: 0.13.0
 
-      - name: Build with zig cross
+      - name: Install cargo-zigbuild
+        uses: taiki-e/install-action@v2
         if: ${{ contains(matrix.target, 'musl') }}
-        run: pnpm build -x --target ${{ matrix.target }}
-
-      - name: Build with napi cross
-        if: ${{ contains(matrix.target, 'gnu') }}
         env:
-          CC: clang # for mimalloc
-        run: pnpm build --use-napi-cross --target ${{ matrix.target }}
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          tool: cargo-zigbuild
+
+      - name: Setup toolchain
+        if: ${{ matrix.setup }}
+        run: ${{ matrix.setup }}
+        shell: bash
 
       - name: Build
-        if: ${{ !contains(matrix.target, 'gnu') && !contains(matrix.target, 'musl') }}
+        run: ${{ matrix.build }} --target ${{ matrix.target }}
+        shell: bash
         env:
-          CC: clang # for mimalloc
-        run: pnpm build --target ${{ matrix.target }}
+          CC: ${{ matrix.target != 'riscv64gc-unknown-linux-gnu' && matrix.target != 's390x-unknown-linux-gnu' && 'clang' || '' }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
@@ -118,10 +148,11 @@ jobs:
           path: |
             napi/*.node
             napi/*.wasm
+          if-no-files-found: error
 
   build-freebsd:
     needs: check
-    if: needs.check.outputs.version_changed == 'true'
+    # if: needs.check.outputs.version_changed == 'true'
     name: Build FreeBSD
     runs-on: ubuntu-latest
     steps:
@@ -171,8 +202,10 @@ jobs:
     permissions:
       id-token: write # for `npm publish --provenance`
     needs:
+      - check
       - build
       - build-freebsd
+    if: needs.check.outputs.version_changed == 'true'
     env:
       COREPACK_INTEGRITY_KEYS: 0
     steps:
