--- a/.github/workflows/release-napi.yml
+++ b/.github/workflows/release-napi.yml
@@ -7,6 +7,7 @@ on:
       - main
     paths:
       - npm/package.json # Please only commit this file, so we don't need to wait for test CI to pass.
+  pull_request: null
 
 env:
   DEBUG: napi:*
@@ -33,7 +34,7 @@ jobs:
         id: version
         with:
           static-checking: localIsNew
-          file-url: https://cdn.jsdelivr.net/npm/unrs-resolver@latest/package.json
+          file-url: https://unpkg.com/unrs-resolver@latest/package.json
           file-name: npm/package.json
 
       - name: Set version name
@@ -44,7 +45,7 @@ jobs:
 
   build:
     needs: check
-    if: needs.check.outputs.version_changed == 'true'
+    # if: needs.check.outputs.version_changed == 'true'
     strategy:
       fail-fast: false
       matrix:
@@ -77,6 +78,15 @@ jobs:
           - os: ubuntu-latest
             target: armv7-unknown-linux-musleabihf
             build: pnpm build -x
+          - os: ubuntu-latest
+            target: riscv64gc-unknown-linux-gnu
+            setup: |
+              sudo apt-get update
+              sudo apt-get install gcc-riscv64-linux-gnu -y
+            build: >-
+              set -e &&
+              rustup target add riscv64gc-unknown-linux-gnu &&
+              pnpm build
           - os: ubuntu-latest
             target: powerpc64le-unknown-linux-gnu
             build: pnpm build --use-napi-cross
@@ -117,6 +127,11 @@ jobs:
         with:
           tool: cargo-zigbuild
 
+      - name: Setup toolchain
+        if: ${{ matrix.setup }}
+        run: ${{ matrix.setup }}
+        shell: bash
+
       - name: Build
         run: ${{ matrix.build }} --target ${{ matrix.target }}
         shell: bash
@@ -132,7 +147,7 @@ jobs:
 
   build-freebsd:
     needs: check
-    if: needs.check.outputs.version_changed == 'true'
+    # if: needs.check.outputs.version_changed == 'true'
     name: Build FreeBSD
     runs-on: ubuntu-latest
     steps:
@@ -182,8 +197,10 @@ jobs:
     permissions:
       id-token: write # for `npm publish --provenance`
     needs:
+      - check
       - build
       - build-freebsd
+    if: needs.check.outputs.version_changed == 'true'
     env:
       COREPACK_INTEGRITY_KEYS: 0
     steps:
