--- a/npm/package.json
+++ b/npm/package.json
@@ -39,6 +39,7 @@
       "armv7-unknown-linux-gnueabihf",
       "armv7-unknown-linux-musleabihf",
       "powerpc64le-unknown-linux-gnu",
+      "riscv64gc-unknown-linux-gnu",
       "s390x-unknown-linux-gnu",
       "x86_64-apple-darwin",
       "aarch64-apple-darwin",
