--- a/.github/workflows/release-napi.yml
+++ b/.github/workflows/release-napi.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   DEBUG: napi:*
-  APP_NAME: rspack-resolver
+  APP_NAME: unrs-resolver
   OXC_LOG: debug
   MACOSX_DEPLOYMENT_TARGET: 10.13
   CC: clang
@@ -25,7 +25,6 @@ jobs:
     name: Check version
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ env.version }}
       version_changed: ${{ steps.version.outputs.changed }}
     steps:
       - uses: taiki-e/checkout-action@b13d20b7cda4e2f325ef19895128f7ff735c0b3d # v1
@@ -35,22 +34,18 @@ jobs:
         id: version
         with:
           static-checking: localIsNew
-          file-url: https://cdn.jsdelivr.net/npm/rspack-resolver@latest/package.json
+          file-url: https://cdn.jsdelivr.net/npm/unrs-resolver@latest/package.json
           file-name: npm/package.json
 
       - name: Set version name
         if: steps.version.outputs.changed == 'true'
-        run: |
-          echo "Version change found! New version: ${{ steps.version.outputs.version }} (${{ steps.version.outputs.type }})"
-          echo "version=${{ steps.version.outputs.version }}" >> $GITHUB_ENV
+        env:
+          version: ${{ steps.version.outputs.version }}
+        run: echo "version=${version}"
 
   build:
     needs: check
     if: needs.check.outputs.version_changed == 'true'
-    env:
-      version: ${{ needs.check.outputs.version }}
-    outputs:
-      version: ${{ env.version }}
     strategy:
       fail-fast: false
       matrix:
