--- a/fixtures/tsconfig/cases/paths_template_variable/tsconfig.json
+++ b/fixtures/tsconfig/cases/paths_template_variable/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "composite": true,
     "paths": {
-      "foo": ["${configDir}/foo.js"]
+      "foo": ["${configDir}/src/foo.js"]
     }
   }
 }
