--- a/fixtures/tsconfig/tsconfig_template_variable1.json
+++ b/fixtures/tsconfig/tsconfig_template_variable1.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "paths": {
-      "foo": ["${configDir}/foo.js"]
+      "foo": ["${configDir}/src/foo.js"]
     }
   }
 }
