--- a/npm/package.json
+++ b/npm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unrs-resolver",
   "version": "1.5.0",
-  "description": "Oxc Resolver Node API with PNP support",
+  "description": "UnRS Resolver Node API with PNP support",
   "main": "index.js",
   "browser": "browser.js",
   "files": [
@@ -10,11 +10,8 @@
     "browser.js"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/unrs/unrs-resolver",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/unrs/unrs-resolver.git"
-  },
+  "homepage": "https://github.com/unrs/unrs-resolver#readme",
+  "repository": "git+https://github.com/unrs/unrs-resolver.git",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
@@ -46,7 +43,11 @@
       "wasm32-wasip1-threads"
     ]
   },
-  "funding": {
-    "url": "https://github.com/sponsors/JounQin"
+  "funding": "https://github.com/sponsors/JounQin",
+  "scripts": {
+    "postinstall": "napi-postinstall unrs-resolver check"
+  },
+  "dependencies": {
+    "napi-postinstall": "^0.1.1"
   }
 }
