--- a/npm/package.json
+++ b/npm/package.json
@@ -37,6 +37,7 @@
       "armv7-unknown-linux-musleabihf",
       "powerpc64le-unknown-linux-gnu",
       "riscv64gc-unknown-linux-gnu",
+      "riscv64gc-unknown-linux-musl",
       "s390x-unknown-linux-gnu",
       "x86_64-apple-darwin",
       "aarch64-apple-darwin",
