--- a/.github/workflows/release-napi.yml
+++ b/.github/workflows/release-napi.yml
@@ -9,6 +9,9 @@ on:
       - main
     paths:
       - npm/package.json # Please only commit this file, so we don't need to wait for test CI to pass.
+  pull_request:
+    branches:
+      - main
 
 env:
   DEBUG: napi:*
@@ -42,7 +45,7 @@ jobs:
 
   build:
     needs: check
-    if: needs.check.outputs.version_changed == 'true'
+    # if: needs.check.outputs.version_changed == 'true'
     strategy:
       fail-fast: false
       matrix:
