--- a/napi/Cargo.toml
+++ b/napi/Cargo.toml
@@ -11,19 +11,19 @@ test = false
 doctest = false
 
 [dependencies]
-napi = { version = "3.0.0-alpha.33", default-features = false, features = ["napi3", "serde-json"] }
-napi-derive = { version = "3.0.0-alpha.29" }
+napi = { version = "3.0.0-beta.2", default-features = false, features = ["napi3", "serde-json"] }
+napi-derive = { version = "3.0.0-beta.2" }
 oxc_resolver = { path = "..", package = "unrs_resolver" }
 tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "fmt"] } # Omit the `regex` feature
 
 [target.'cfg(not(any(target_os = "linux", target_os = "freebsd", target_arch = "arm", target_family = "wasm")))'.dependencies]
-mimalloc-safe = { version = "0.1.51", features = ["skip_collect_on_exit"] }
+mimalloc-safe = { version = "0.1.52", features = ["skip_collect_on_exit"] }
 
 [target.'cfg(all(target_os = "linux", not(target_arch = "arm"), not(target_arch = "aarch64")))'.dependencies]
-mimalloc-safe = { version = "0.1.51", features = ["skip_collect_on_exit", "local_dynamic_tls"] }
+mimalloc-safe = { version = "0.1.52", features = ["skip_collect_on_exit", "local_dynamic_tls"] }
 
 [target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
-mimalloc-safe = { version = "0.1.51", features = ["skip_collect_on_exit", "local_dynamic_tls", "no_opt_arch"] }
+mimalloc-safe = { version = "0.1.52", features = ["skip_collect_on_exit", "local_dynamic_tls", "no_opt_arch"] }
 
 [build-dependencies]
-napi-build = "2.1.6"
+napi-build = "2.2.0"
