--- a/.github/actions/pnpm/action.yml
+++ b/.github/actions/pnpm/action.yml
@@ -32,5 +32,7 @@ runs:
       shell: bash
       run: |
         cd fixtures/pnp
-        corepack enable
+        yarn install
+
+        cd ../global-pnp
         yarn install
