--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,7 @@ document-features = { version = "0.2.11", optional = true }
 
 [dev-dependencies]
 criterion2 = { version = "3.0.0", default-features = false }
+dirs = { version = "6.0.0" }
 normalize-path = { version = "0.2.1" }
 rayon = { version = "1.10.0" }
 vfs = "0.12.1" # for testing with in memory file system
