--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       - uses: ./.github/actions/pnpm
       - run: cargo check --all-features --locked
       - run: cargo test --doc
-      - run: cargo test --all-features -- --nocapture
+      - run: cargo test --all-features
       - run: pnpm run build:debug && pnpm run test
         if: ${{ matrix.os  != 'windows-latest' }}
 
