--- a/fixtures/pnp/package.json
+++ b/fixtures/pnp/package.json
@@ -1,9 +1,10 @@
 {
   "name": "pnp",
-  "packageManager": "yarn@4.9.1",
+  "packageManager": "yarn@4.9.2",
   "dependencies": {
     "@atlaskit/pragmatic-drag-and-drop": "^1.5.2",
     "beachball": "^2.52.0",
+    "custom-minimist": "npm:minimist@^1.2.8",
     "is-even": "^1.0.0",
     "is-odd": "^3.0.1",
     "lib": "link:./shared",
